Release 1.0.10